--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@noahsaso/cosmodal",
-  "version": "0.6.0",
+  "name": "@marsprotcol/cosmodal",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NoahSaso/cosmodal.git"
+    "url": "git+https://github.com/mars-protocol/cosmodal.git"
   },
-  "author": "Noah Saso",
+  "author": "Mars Protocol",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/NoahSaso/cosmodal/issues"
+    "url": "https://github.com/mars-protocol/cosmodal/issues"
   },
-  "homepage": "https://github.com/NoahSaso/cosmodal#readme",
+  "homepage": "https://github.com/mars-protocol/cosmodal#readme",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "unpkg": "dist/index.js",
@@ -99,5 +99,6 @@
   "peerDependencies": {
     "react": "^16 || ^17 || ^18",
     "react-dom": "^16 || ^17 || ^18"
-  }
+  },
+  "description": "![osmosis-banner-1200w](https://user-images.githubusercontent.com/4606373/167008669-fb3cafa8-e66e-4cdf-8599-3308039cc58c.png)"
 }
