--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@marsprotcol/cosmodal",
+  "name": "@marsprotocol/cosmodal",
   "version": "0.1.0",
   "repository": {
     "type": "git",
@@ -100,5 +100,5 @@
     "react": "^16 || ^17 || ^18",
     "react-dom": "^16 || ^17 || ^18"
   },
-  "description": "![osmosis-banner-1200w](https://user-images.githubusercontent.com/4606373/167008669-fb3cafa8-e66e-4cdf-8599-3308039cc58c.png)"
+  "description": "![mars-banner-1200w](https://marsprotocol.io/banner.png)"
 }
